README finished
