# app/Swagger/UserSchema.php
@@ -6,14 +6,15 @@ use OpenApi\Annotations as OA;
 
 /**
  * @OA\Schema(
- *     schema="Pessoa",
- *     title="Pessoa",
+ *     schema="User",
+ *     title="User",
  *     type="object",
  *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="nome", type="string", example="João da Silva"),
- *     @OA\Property(property="email", type="string", example="joao@email.com"),
+ *     @OA\Property(property="name", type="string", example="Admin"),
+ *     @OA\Property(property="email", type="string", example="admin@email.com"),
+ *     @OA\Property(property="role", type="string", example="admin"),
  *     @OA\Property(property="created_at", type="string", format="date-time"),
  *     @OA\Property(property="updated_at", type="string", format="date-time"),
  * )
  */
-class SwaggerSchemas {}
+class UserSchema {}
